# currency-converter-api

./: .tflint.hcl  README.md
.github/workflows/: deploy-application.yml  deploy-ingestion.yml  deploy_ingestion.yml  terraform-apply.yml  terraform-plan.yml
infrastructure/environments/production/: main.tf  providers.tf  variables.tf
infrastructure/environments/staging/: main.tf  providers.tf  variables.tf
infrastructure/modules/: ingestion.tf  variables.tf
infrastructure/modules/ingestion/: ecr.tf  iam.tf  lambda.tf  outputs.tf  s3.tf
infrastructure/modules/ingestion/policies/: ecr_lifecycle_policy.json
ingestion/: .env.example  .gitignore  Dockerfile  pyproject.toml
ingestion/src/: index.py
ingestion/src/clients/ecb/: ecb_client.py  http_ecb_client.py  local_ecb_client.py
ingestion/src/containers/: ingestion_service_container.py
ingestion/src/models/: settings.py
ingestion/src/services/: ingestion_service.py
ingestion/src/stores/archive/: archive_store.py  local_archive_store.py  s3_archive_store.py
ingestion/src/stores/live/: live_store.py  s3_live_store.py
ingestion/src/stores/rates/: rates_store.py  s3_rates_store.py
ingestion/src/stores/vault/: local_vault_store.py  s3_vault_store.py  vault_store.py
ingestion/src/utils/: parsers.py
ingestion/tests/e2e/: conftest.py  constants.py  test_index.py
