[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.39.3",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
test = [
    "boto3>=1.42.83",
    "boto3-stubs[essential]>=1.42.83",
    "freezegun>=1.5.5",
    "moto>=5.1.22",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "respx>=0.22.0",
    "ruff>=0.15.9",
]
